parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> code
Rule 1     code -> code_block
Rule 2     code -> code_blocks
Rule 3     code_blocks -> code_block code_blocks
Rule 4     code_blocks -> code_block code_block
Rule 5     code_block -> main
Rule 6     code_block -> funct_def
Rule 7     instruction -> NAME LEFT_BRACKET empty RIGHT_BRACKET SEMICOLON
Rule 8     instruction -> NAME LEFT_BRACKET expression RIGHT_BRACKET SEMICOLON
Rule 9     instruction -> NAME LEFT_BRACKET function_input RIGHT_BRACKET SEMICOLON
Rule 10    function_input -> expression COMA expression
Rule 11    function_input -> expression COMA function_input
Rule 12    funct_def -> INT_FUN NAME funct_param LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
Rule 13    funct_def -> VOID NAME funct_param LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
Rule 14    funct_param -> LEFT_BRACKET empty RIGHT_BRACKET
Rule 15    funct_param -> LEFT_BRACKET expression RIGHT_BRACKET
Rule 16    funct_param -> LEFT_BRACKET expressions RIGHT_BRACKET
Rule 17    expressions -> expression COMA expression
Rule 18    expressions -> expressions COMA expression
Rule 19    main -> MAIN LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
Rule 20    main -> MAIN LEFT_CURLY_BRACKET condition RIGHT_CURLY_BRACKET
Rule 21    main -> MAIN LEFT_CURLY_BRACKET empty RIGHT_CURLY_BRACKET
Rule 22    instruction -> RETURN instruction
Rule 23    condition -> LEFT_BRACKET expression MORE expression RIGHT_BRACKET
Rule 24    condition -> LEFT_BRACKET expression LESS expression RIGHT_BRACKET
Rule 25    condition -> LEFT_BRACKET expression MORE_OR_EQUAL expression RIGHT_BRACKET
Rule 26    condition -> LEFT_BRACKET expression LESS_OR_EQUAL expression RIGHT_BRACKET
Rule 27    condition -> LEFT_BRACKET expression IS_EQUAL expression RIGHT_BRACKET
Rule 28    instruction -> WHILE condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
Rule 29    instruction -> IF condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET else
Rule 30    instruction -> IF condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET if_else_block
Rule 31    if_else_block -> IF_ELSE condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET else
Rule 32    if_else_block -> IF_ELSE condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET if_else_block
Rule 33    else -> ELSE LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
Rule 34    else -> ELSE LEFT_CURLY_BRACKET empty RIGHT_CURLY_BRACKET
Rule 35    expression -> expression MULTIPLY expression
Rule 36    expression -> expression DIVIDE expression
Rule 37    expression -> expression PLUS expression
Rule 38    expression -> expression MINUS expression
Rule 39    instruction -> expression SEMICOLON
Rule 40    instruction -> declaration SEMICOLON
Rule 41    instruction -> instruction instruction
Rule 42    expression -> INT
Rule 43    expression -> NAME
Rule 44    expression -> APOSTROF NAME APOSTROF
Rule 45    declaration -> INT_FUN NAME
Rule 46    declaration -> STRING NAME
Rule 47    expression -> declaration EQUALS expression
Rule 48    expression -> NAME EQUALS expression
Rule 49    declarations -> declaration COMA declaration
Rule 50    declarations -> declaration COMA declarations
Rule 51    instruction -> PRINT LEFT_BRACKET expression RIGHT_BRACKET SEMICOLON
Rule 52    empty -> <empty>

Terminals, with rules where they appear

APOSTROF             : 44 44
COMA                 : 10 11 17 18 49 50
DIVIDE               : 36
ELSE                 : 33 34
EQUALS               : 47 48
IF                   : 29 30
IF_ELSE              : 31 32
INT                  : 42
INT_FUN              : 12 45
IS_EQUAL             : 27
LEFT_BRACKET         : 7 8 9 14 15 16 23 24 25 26 27 51
LEFT_CURLY_BRACKET   : 12 13 19 20 21 28 29 30 31 32 33 34
LESS                 : 24
LESS_OR_EQUAL        : 26
MAIN                 : 19 20 21
MINUS                : 38
MORE                 : 23
MORE_OR_EQUAL        : 25
MULTIPLY             : 35
NAME                 : 7 8 9 12 13 43 44 45 46 48
PLUS                 : 37
PRINT                : 51
RETURN               : 22
RIGHT_BRACKET        : 7 8 9 14 15 16 23 24 25 26 27 51
RIGHT_CURLY_BRACKET  : 12 13 19 20 21 28 29 30 31 32 33 34
SEMICOLON            : 7 8 9 39 40 51
STRING               : 46
VOID                 : 13
WHILE                : 28
error                : 

Nonterminals, with rules where they appear

code                 : 0
code_block           : 1 3 4 4
code_blocks          : 2 3
condition            : 20 28 29 30 31 32
declaration          : 40 47 49 49 50
declarations         : 50
else                 : 29 31
empty                : 7 14 21 34
expression           : 8 10 10 11 15 17 17 18 23 23 24 24 25 25 26 26 27 27 35 35 36 36 37 37 38 38 39 47 48 51
expressions          : 16 18
funct_def            : 6
funct_param          : 12 13
function_input       : 9 11
if_else_block        : 30 32
instruction          : 12 13 19 22 28 29 30 31 32 33 41 41
main                 : 5

Parsing method: LALR

state 0

    (0) S' -> . code
    (1) code -> . code_block
    (2) code -> . code_blocks
    (5) code_block -> . main
    (6) code_block -> . funct_def
    (3) code_blocks -> . code_block code_blocks
    (4) code_blocks -> . code_block code_block
    (19) main -> . MAIN LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (20) main -> . MAIN LEFT_CURLY_BRACKET condition RIGHT_CURLY_BRACKET
    (21) main -> . MAIN LEFT_CURLY_BRACKET empty RIGHT_CURLY_BRACKET
    (12) funct_def -> . INT_FUN NAME funct_param LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (13) funct_def -> . VOID NAME funct_param LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET

    MAIN            shift and go to state 6
    INT_FUN         shift and go to state 7
    VOID            shift and go to state 8

    code                           shift and go to state 1
    code_block                     shift and go to state 2
    code_blocks                    shift and go to state 3
    main                           shift and go to state 4
    funct_def                      shift and go to state 5

state 1

    (0) S' -> code .



state 2

    (1) code -> code_block .
    (3) code_blocks -> code_block . code_blocks
    (4) code_blocks -> code_block . code_block
    (3) code_blocks -> . code_block code_blocks
    (4) code_blocks -> . code_block code_block
    (5) code_block -> . main
    (6) code_block -> . funct_def
    (19) main -> . MAIN LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (20) main -> . MAIN LEFT_CURLY_BRACKET condition RIGHT_CURLY_BRACKET
    (21) main -> . MAIN LEFT_CURLY_BRACKET empty RIGHT_CURLY_BRACKET
    (12) funct_def -> . INT_FUN NAME funct_param LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (13) funct_def -> . VOID NAME funct_param LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET

    $end            reduce using rule 1 (code -> code_block .)
    MAIN            shift and go to state 6
    INT_FUN         shift and go to state 7
    VOID            shift and go to state 8

    code_block                     shift and go to state 9
    code_blocks                    shift and go to state 10
    main                           shift and go to state 4
    funct_def                      shift and go to state 5

state 3

    (2) code -> code_blocks .

    $end            reduce using rule 2 (code -> code_blocks .)


state 4

    (5) code_block -> main .

    MAIN            reduce using rule 5 (code_block -> main .)
    INT_FUN         reduce using rule 5 (code_block -> main .)
    VOID            reduce using rule 5 (code_block -> main .)
    $end            reduce using rule 5 (code_block -> main .)


state 5

    (6) code_block -> funct_def .

    MAIN            reduce using rule 6 (code_block -> funct_def .)
    INT_FUN         reduce using rule 6 (code_block -> funct_def .)
    VOID            reduce using rule 6 (code_block -> funct_def .)
    $end            reduce using rule 6 (code_block -> funct_def .)


state 6

    (19) main -> MAIN . LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (20) main -> MAIN . LEFT_CURLY_BRACKET condition RIGHT_CURLY_BRACKET
    (21) main -> MAIN . LEFT_CURLY_BRACKET empty RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET shift and go to state 11


state 7

    (12) funct_def -> INT_FUN . NAME funct_param LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET

    NAME            shift and go to state 12


state 8

    (13) funct_def -> VOID . NAME funct_param LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET

    NAME            shift and go to state 13


state 9

    (4) code_blocks -> code_block code_block .
    (3) code_blocks -> code_block . code_blocks
    (4) code_blocks -> code_block . code_block
    (3) code_blocks -> . code_block code_blocks
    (4) code_blocks -> . code_block code_block
    (5) code_block -> . main
    (6) code_block -> . funct_def
    (19) main -> . MAIN LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (20) main -> . MAIN LEFT_CURLY_BRACKET condition RIGHT_CURLY_BRACKET
    (21) main -> . MAIN LEFT_CURLY_BRACKET empty RIGHT_CURLY_BRACKET
    (12) funct_def -> . INT_FUN NAME funct_param LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (13) funct_def -> . VOID NAME funct_param LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET

    $end            reduce using rule 4 (code_blocks -> code_block code_block .)
    MAIN            shift and go to state 6
    INT_FUN         shift and go to state 7
    VOID            shift and go to state 8

    code_block                     shift and go to state 9
    code_blocks                    shift and go to state 10
    main                           shift and go to state 4
    funct_def                      shift and go to state 5

state 10

    (3) code_blocks -> code_block code_blocks .

    $end            reduce using rule 3 (code_blocks -> code_block code_blocks .)


state 11

    (19) main -> MAIN LEFT_CURLY_BRACKET . instruction RIGHT_CURLY_BRACKET
    (20) main -> MAIN LEFT_CURLY_BRACKET . condition RIGHT_CURLY_BRACKET
    (21) main -> MAIN LEFT_CURLY_BRACKET . empty RIGHT_CURLY_BRACKET
    (7) instruction -> . NAME LEFT_BRACKET empty RIGHT_BRACKET SEMICOLON
    (8) instruction -> . NAME LEFT_BRACKET expression RIGHT_BRACKET SEMICOLON
    (9) instruction -> . NAME LEFT_BRACKET function_input RIGHT_BRACKET SEMICOLON
    (22) instruction -> . RETURN instruction
    (28) instruction -> . WHILE condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (29) instruction -> . IF condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET else
    (30) instruction -> . IF condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET if_else_block
    (39) instruction -> . expression SEMICOLON
    (40) instruction -> . declaration SEMICOLON
    (41) instruction -> . instruction instruction
    (51) instruction -> . PRINT LEFT_BRACKET expression RIGHT_BRACKET SEMICOLON
    (23) condition -> . LEFT_BRACKET expression MORE expression RIGHT_BRACKET
    (24) condition -> . LEFT_BRACKET expression LESS expression RIGHT_BRACKET
    (25) condition -> . LEFT_BRACKET expression MORE_OR_EQUAL expression RIGHT_BRACKET
    (26) condition -> . LEFT_BRACKET expression LESS_OR_EQUAL expression RIGHT_BRACKET
    (27) condition -> . LEFT_BRACKET expression IS_EQUAL expression RIGHT_BRACKET
    (52) empty -> .
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (42) expression -> . INT
    (43) expression -> . NAME
    (44) expression -> . APOSTROF NAME APOSTROF
    (47) expression -> . declaration EQUALS expression
    (48) expression -> . NAME EQUALS expression
    (45) declaration -> . INT_FUN NAME
    (46) declaration -> . STRING NAME

    NAME            shift and go to state 17
    RETURN          shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    PRINT           shift and go to state 24
    LEFT_BRACKET    shift and go to state 18
    RIGHT_CURLY_BRACKET reduce using rule 52 (empty -> .)
    INT             shift and go to state 25
    APOSTROF        shift and go to state 26
    INT_FUN         shift and go to state 27
    STRING          shift and go to state 28

    instruction                    shift and go to state 14
    condition                      shift and go to state 15
    empty                          shift and go to state 16
    expression                     shift and go to state 19
    declaration                    shift and go to state 23

state 12

    (12) funct_def -> INT_FUN NAME . funct_param LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (14) funct_param -> . LEFT_BRACKET empty RIGHT_BRACKET
    (15) funct_param -> . LEFT_BRACKET expression RIGHT_BRACKET
    (16) funct_param -> . LEFT_BRACKET expressions RIGHT_BRACKET

    LEFT_BRACKET    shift and go to state 30

    funct_param                    shift and go to state 29

state 13

    (13) funct_def -> VOID NAME . funct_param LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (14) funct_param -> . LEFT_BRACKET empty RIGHT_BRACKET
    (15) funct_param -> . LEFT_BRACKET expression RIGHT_BRACKET
    (16) funct_param -> . LEFT_BRACKET expressions RIGHT_BRACKET

    LEFT_BRACKET    shift and go to state 30

    funct_param                    shift and go to state 31

state 14

    (19) main -> MAIN LEFT_CURLY_BRACKET instruction . RIGHT_CURLY_BRACKET
    (41) instruction -> instruction . instruction
    (7) instruction -> . NAME LEFT_BRACKET empty RIGHT_BRACKET SEMICOLON
    (8) instruction -> . NAME LEFT_BRACKET expression RIGHT_BRACKET SEMICOLON
    (9) instruction -> . NAME LEFT_BRACKET function_input RIGHT_BRACKET SEMICOLON
    (22) instruction -> . RETURN instruction
    (28) instruction -> . WHILE condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (29) instruction -> . IF condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET else
    (30) instruction -> . IF condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET if_else_block
    (39) instruction -> . expression SEMICOLON
    (40) instruction -> . declaration SEMICOLON
    (41) instruction -> . instruction instruction
    (51) instruction -> . PRINT LEFT_BRACKET expression RIGHT_BRACKET SEMICOLON
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (42) expression -> . INT
    (43) expression -> . NAME
    (44) expression -> . APOSTROF NAME APOSTROF
    (47) expression -> . declaration EQUALS expression
    (48) expression -> . NAME EQUALS expression
    (45) declaration -> . INT_FUN NAME
    (46) declaration -> . STRING NAME

    RIGHT_CURLY_BRACKET shift and go to state 33
    NAME            shift and go to state 17
    RETURN          shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    PRINT           shift and go to state 24
    INT             shift and go to state 25
    APOSTROF        shift and go to state 26
    INT_FUN         shift and go to state 27
    STRING          shift and go to state 28

    instruction                    shift and go to state 32
    expression                     shift and go to state 19
    declaration                    shift and go to state 23

state 15

    (20) main -> MAIN LEFT_CURLY_BRACKET condition . RIGHT_CURLY_BRACKET

    RIGHT_CURLY_BRACKET shift and go to state 34


state 16

    (21) main -> MAIN LEFT_CURLY_BRACKET empty . RIGHT_CURLY_BRACKET

    RIGHT_CURLY_BRACKET shift and go to state 35


state 17

    (7) instruction -> NAME . LEFT_BRACKET empty RIGHT_BRACKET SEMICOLON
    (8) instruction -> NAME . LEFT_BRACKET expression RIGHT_BRACKET SEMICOLON
    (9) instruction -> NAME . LEFT_BRACKET function_input RIGHT_BRACKET SEMICOLON
    (43) expression -> NAME .
    (48) expression -> NAME . EQUALS expression

    LEFT_BRACKET    shift and go to state 36
    SEMICOLON       reduce using rule 43 (expression -> NAME .)
    MULTIPLY        reduce using rule 43 (expression -> NAME .)
    DIVIDE          reduce using rule 43 (expression -> NAME .)
    PLUS            reduce using rule 43 (expression -> NAME .)
    MINUS           reduce using rule 43 (expression -> NAME .)
    EQUALS          shift and go to state 37


state 18

    (23) condition -> LEFT_BRACKET . expression MORE expression RIGHT_BRACKET
    (24) condition -> LEFT_BRACKET . expression LESS expression RIGHT_BRACKET
    (25) condition -> LEFT_BRACKET . expression MORE_OR_EQUAL expression RIGHT_BRACKET
    (26) condition -> LEFT_BRACKET . expression LESS_OR_EQUAL expression RIGHT_BRACKET
    (27) condition -> LEFT_BRACKET . expression IS_EQUAL expression RIGHT_BRACKET
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (42) expression -> . INT
    (43) expression -> . NAME
    (44) expression -> . APOSTROF NAME APOSTROF
    (47) expression -> . declaration EQUALS expression
    (48) expression -> . NAME EQUALS expression
    (45) declaration -> . INT_FUN NAME
    (46) declaration -> . STRING NAME

    INT             shift and go to state 25
    NAME            shift and go to state 39
    APOSTROF        shift and go to state 26
    INT_FUN         shift and go to state 27
    STRING          shift and go to state 28

    expression                     shift and go to state 38
    declaration                    shift and go to state 40

state 19

    (39) instruction -> expression . SEMICOLON
    (35) expression -> expression . MULTIPLY expression
    (36) expression -> expression . DIVIDE expression
    (37) expression -> expression . PLUS expression
    (38) expression -> expression . MINUS expression

    SEMICOLON       shift and go to state 41
    MULTIPLY        shift and go to state 42
    DIVIDE          shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45


state 20

    (22) instruction -> RETURN . instruction
    (7) instruction -> . NAME LEFT_BRACKET empty RIGHT_BRACKET SEMICOLON
    (8) instruction -> . NAME LEFT_BRACKET expression RIGHT_BRACKET SEMICOLON
    (9) instruction -> . NAME LEFT_BRACKET function_input RIGHT_BRACKET SEMICOLON
    (22) instruction -> . RETURN instruction
    (28) instruction -> . WHILE condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (29) instruction -> . IF condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET else
    (30) instruction -> . IF condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET if_else_block
    (39) instruction -> . expression SEMICOLON
    (40) instruction -> . declaration SEMICOLON
    (41) instruction -> . instruction instruction
    (51) instruction -> . PRINT LEFT_BRACKET expression RIGHT_BRACKET SEMICOLON
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (42) expression -> . INT
    (43) expression -> . NAME
    (44) expression -> . APOSTROF NAME APOSTROF
    (47) expression -> . declaration EQUALS expression
    (48) expression -> . NAME EQUALS expression
    (45) declaration -> . INT_FUN NAME
    (46) declaration -> . STRING NAME

    NAME            shift and go to state 17
    RETURN          shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    PRINT           shift and go to state 24
    INT             shift and go to state 25
    APOSTROF        shift and go to state 26
    INT_FUN         shift and go to state 27
    STRING          shift and go to state 28

    instruction                    shift and go to state 46
    expression                     shift and go to state 19
    declaration                    shift and go to state 23

state 21

    (28) instruction -> WHILE . condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (23) condition -> . LEFT_BRACKET expression MORE expression RIGHT_BRACKET
    (24) condition -> . LEFT_BRACKET expression LESS expression RIGHT_BRACKET
    (25) condition -> . LEFT_BRACKET expression MORE_OR_EQUAL expression RIGHT_BRACKET
    (26) condition -> . LEFT_BRACKET expression LESS_OR_EQUAL expression RIGHT_BRACKET
    (27) condition -> . LEFT_BRACKET expression IS_EQUAL expression RIGHT_BRACKET

    LEFT_BRACKET    shift and go to state 18

    condition                      shift and go to state 47

state 22

    (29) instruction -> IF . condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET else
    (30) instruction -> IF . condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET if_else_block
    (23) condition -> . LEFT_BRACKET expression MORE expression RIGHT_BRACKET
    (24) condition -> . LEFT_BRACKET expression LESS expression RIGHT_BRACKET
    (25) condition -> . LEFT_BRACKET expression MORE_OR_EQUAL expression RIGHT_BRACKET
    (26) condition -> . LEFT_BRACKET expression LESS_OR_EQUAL expression RIGHT_BRACKET
    (27) condition -> . LEFT_BRACKET expression IS_EQUAL expression RIGHT_BRACKET

    LEFT_BRACKET    shift and go to state 18

    condition                      shift and go to state 48

state 23

    (40) instruction -> declaration . SEMICOLON
    (47) expression -> declaration . EQUALS expression

    SEMICOLON       shift and go to state 49
    EQUALS          shift and go to state 50


state 24

    (51) instruction -> PRINT . LEFT_BRACKET expression RIGHT_BRACKET SEMICOLON

    LEFT_BRACKET    shift and go to state 51


state 25

    (42) expression -> INT .

    SEMICOLON       reduce using rule 42 (expression -> INT .)
    MULTIPLY        reduce using rule 42 (expression -> INT .)
    DIVIDE          reduce using rule 42 (expression -> INT .)
    PLUS            reduce using rule 42 (expression -> INT .)
    MINUS           reduce using rule 42 (expression -> INT .)
    MORE            reduce using rule 42 (expression -> INT .)
    LESS            reduce using rule 42 (expression -> INT .)
    MORE_OR_EQUAL   reduce using rule 42 (expression -> INT .)
    LESS_OR_EQUAL   reduce using rule 42 (expression -> INT .)
    IS_EQUAL        reduce using rule 42 (expression -> INT .)
    RIGHT_BRACKET   reduce using rule 42 (expression -> INT .)
    COMA            reduce using rule 42 (expression -> INT .)


state 26

    (44) expression -> APOSTROF . NAME APOSTROF

    NAME            shift and go to state 52


state 27

    (45) declaration -> INT_FUN . NAME

    NAME            shift and go to state 53


state 28

    (46) declaration -> STRING . NAME

    NAME            shift and go to state 54


state 29

    (12) funct_def -> INT_FUN NAME funct_param . LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET shift and go to state 55


state 30

    (14) funct_param -> LEFT_BRACKET . empty RIGHT_BRACKET
    (15) funct_param -> LEFT_BRACKET . expression RIGHT_BRACKET
    (16) funct_param -> LEFT_BRACKET . expressions RIGHT_BRACKET
    (52) empty -> .
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (42) expression -> . INT
    (43) expression -> . NAME
    (44) expression -> . APOSTROF NAME APOSTROF
    (47) expression -> . declaration EQUALS expression
    (48) expression -> . NAME EQUALS expression
    (17) expressions -> . expression COMA expression
    (18) expressions -> . expressions COMA expression
    (45) declaration -> . INT_FUN NAME
    (46) declaration -> . STRING NAME

    RIGHT_BRACKET   reduce using rule 52 (empty -> .)
    INT             shift and go to state 25
    NAME            shift and go to state 39
    APOSTROF        shift and go to state 26
    INT_FUN         shift and go to state 27
    STRING          shift and go to state 28

    empty                          shift and go to state 56
    expression                     shift and go to state 57
    expressions                    shift and go to state 58
    declaration                    shift and go to state 40

state 31

    (13) funct_def -> VOID NAME funct_param . LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET shift and go to state 59


state 32

    (41) instruction -> instruction instruction .
    (41) instruction -> instruction . instruction
    (7) instruction -> . NAME LEFT_BRACKET empty RIGHT_BRACKET SEMICOLON
    (8) instruction -> . NAME LEFT_BRACKET expression RIGHT_BRACKET SEMICOLON
    (9) instruction -> . NAME LEFT_BRACKET function_input RIGHT_BRACKET SEMICOLON
    (22) instruction -> . RETURN instruction
    (28) instruction -> . WHILE condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET
    (29) instruction -> . IF condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET else
    (30) instruction -> . IF condition LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET if_else_block
    (39) instruction -> . expression SEMICOLON
    (40) instruction -> . declaration SEMICOLON
    (41) instruction -> . instruction instruction
    (51) instruction -> . PRINT LEFT_BRACKET expression RIGHT_BRACKET SEMICOLON
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (42) expression -> . INT
    (43) expression -> . NAME
    (44) expression -> . APOSTROF NAME APOSTROF
    (47) expression -> . declaration EQUALS expression
    (48) expression -> . NAME EQUALS expression
    (45) declaration -> . INT_FUN NAME
    (46) declaration -> . STRING NAME

  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for APOSTROF resolved as shift
  ! shift/reduce conflict for INT_FUN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    RIGHT_CURLY_BRACKET reduce using rule 41 (instruction -> instruction instruction .)
    NAME            shift and go to state 17
    RETURN          shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    PRINT           shift and go to state 24
    INT             shift and go to state 25
    APOSTROF        shift and go to state 26
    INT_FUN         shift and go to state 27
    STRING          shift and go to state 28

  ! NAME            [ reduce using rule 41 (instruction -> instruction instruction .) ]
  ! RETURN          [ reduce using rule 41 (instruction -> instruction instruction .) ]
  ! WHILE           [ reduce using rule 41 (instruction -> instruction instruction .) ]
  ! IF              [ reduce using rule 41 (instruction -> instruction instruction .) ]
  ! PRINT           [ reduce using rule 41 (instruction -> instruction instruction .) ]
  ! INT             [ reduce using rule 41 (instruction -> instruction instruction .) ]
  ! APOSTROF        [ reduce using rule 41 (instruction -> instruction instruction .) ]
  ! INT_FUN         [ reduce using rule 41 (instruction -> instruction instruction .) ]
  ! STRING          [ reduce using rule 41 (instruction -> instruction instruction .) ]

    instruction                    shift and go to state 32
    expression                     shift and go to state 19
    declaration                    shift and go to state 23

state 33

    (19) main -> MAIN LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET .

    MAIN            reduce using rule 19 (main -> MAIN LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET .)
    INT_FUN         reduce using rule 19 (main -> MAIN LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET .)
    VOID            reduce using rule 19 (main -> MAIN LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET .)
    $end            reduce using rule 19 (main -> MAIN LEFT_CURLY_BRACKET instruction RIGHT_CURLY_BRACKET .)


state 34

    (20) main -> MAIN LEFT_CURLY_BRACKET condition RIGHT_CURLY_BRACKET .

    MAIN            reduce using rule 20 (main -> MAIN LEFT_CURLY_BRACKET condition RIGHT_CURLY_BRACKET .)
    INT_FUN         reduce using rule 20 (main -> MAIN LEFT_CURLY_BRACKET condition RIGHT_CURLY_BRACKET .)
    VOID            reduce using rule 20 (main -> MAIN LEFT_CURLY_BRACKET condition RIGHT_CURLY_BRACKET .)
    $end            reduce using rule 20 (main -> MAIN LEFT_CURLY_BRACKET condition RIGHT_CURLY_BRACKET .)


state 35

    (21) main -> MAIN LEFT_CURLY_BRACKET empty RIGHT_CURLY_BRACKET .

    MAIN            reduce using rule 21 (main -> MAIN LEFT_CURLY_BRACKET empty RIGHT_CURLY_BRACKET .)
    INT_FUN         reduce using rule 21 (main -> MAIN LEFT_CURLY_BRACKET empty RIGHT_CURLY_BRACKET .)
    VOID            reduce using rule 21 (main -> MAIN LEFT_CURLY_BRACKET empty RIGHT_CURLY_BRACKET .)
    $end            reduce using rule 21 (main -> MAIN LEFT_CURLY_BRACKET empty RIGHT_CURLY_BRACKET .)


state 36

    (7) instruction -> NAME LEFT_BRACKET . empty RIGHT_BRACKET SEMICOLON
    (8) instruction -> NAME LEFT_BRACKET . expression RIGHT_BRACKET SEMICOLON
    (9) instruction -> NAME LEFT_BRACKET . function_input RIGHT_BRACKET SEMICOLON
    (52) empty -> .
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (42) expression -> . INT
    (43) expression -> . NAME
    (44) expression -> . APOSTROF NAME APOSTROF
    (47) expression -> . declaration EQUALS expression
    (48) expression -> . NAME EQUALS expression
    (10) function_input -> . expression COMA expression
    (11) function_input -> . expression COMA function_input
    (45) declaration -> . INT_FUN NAME
    (46) declaration -> . STRING NAME

    RIGHT_BRACKET   reduce using rule 52 (empty -> .)
    INT             shift and go to state 25
    NAME            shift and go to state 39
    APOSTROF        shift and go to state 26
    INT_FUN         shift and go to state 27
    STRING          shift and go to state 28

    empty                          shift and go to state 60
    expression                     shift and go to state 61
    function_input                 shift and go to state 62
    declaration                    shift and go to state 40

state 37

    (48) expression -> NAME EQUALS . expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression PLUS expression
    (38) expression -> . expression MINUS expression
    (42) expression -> . INT
    (43) expression -> . NAME
    (44) expression -> . APOSTROF NAME APOSTROF
    (47) expression -> . declaration EQUALS expression
    (48) expression -> . NAME EQUALS expression
    (45) declaration -> . INT_FUN NAME
    (46) declaration -> . STRING NAME

    INT             shift and go to state 25
    NAME            shift and go to state 39
    APOSTROF        shift and go to state 26
    INT_FUN         shift and go to state 27
    STRING          shift and go to state 28

    expression                     shift and go to state 63
    declaration                    shift and go to state 40

state 38

    (23) condition -> LEFT_BRACKET expression . MORE expression RIGHT_BRACKET
    (24) condition -> LEFT_BRACKET expression . LESS expression RIGHT_BRACKET
    (25) condition -> LEFT_BRACKET expression . MORE_OR_EQUAL expression RIGHT_BRACKET
    (26) condition -> LEFT_BRACKET expression . LESS_OR_EQUAL expression RIGHT_BRACKET
    (27) condition -> LEFT_BRACKET expression . IS_EQUAL expression RIGHT_BRACKET
    (35) expression -> expression . MULTIPLY expression
    (36) expression -> expression . DIVIDE expression
    (37) expression -> expression . PLUS expression
    (38) expression -> expression . MINUS expression

    MORE            shift and go to state 64
    LESS            shift and go to state 65
    MORE_OR_EQUAL   shift and go to state 66
    LESS_OR_EQUAL   shift and go to state 67
    IS_EQUAL        shift and go to state 68
    MULTIPLY        shift and go to state 42
    DIVIDE          shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45


state 39

    (43) expression -> NAME .
    (48) expression -> NAME . EQUALS expression
